# PrecomputedRasterizer

./: .gitignore  CMakeLists.txt  main.cpp  rasterizer.h  utils.cpp  utils.h
Shader/: draw_screen.fs
Third/glad/include/glad/: glad.h
Third/glad/src/: glad.c
